--- a/world/templates/country/country_list.html
+++ b/world/templates/country/country_list.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
 <h2>All Countries</h2>
+
 <ul>
-{% for country in object_list %}
-    <li><a href="{% url 'country_detail' country.code %}">{{ country.code }}</a></li>
+{% for country in countries %}
+    <li><a href="{% url 'country_detail' country.code %}">{{ country.name }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
